headers/FMXTextStyle.h

	fmx::CharacterStyle FMX_API *FM_CharacterStyle_Constructor1 ( fmx::_fmxcpt &_x ) throw ();
	fmx::CharacterStyle FMX_API *FM_CharacterStyle_Constructor2 ( fmx::CharacterStyle::FontID font, fmx::CharacterStyle::Face face, fmx::CharacterStyle::FontSize size, const fmx::CharacterStyle::Color &color, fmx::_fmxcpt &_x ) throw ();
	fmx::CharacterStyle FMX_API *FM_CharacterStyle_Constructor3 ( const fmx::CharacterStyle &style, fmx::_fmxcpt &_x ) throw ();